--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "testing of package",
   "unity": "2022.2",
   "dependencies": {
-    
+      "@utkarsh5e/com.hellopackage.hellotestpackage": "1.1.0"
   },
   "scopedRegistries": [
     {
