--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "ios"
   ],
   "author": "Utkarsh singh",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "license": "ISC"
+  "repository": {
+    "url": "https://github.com/utkarsh5e/HelloTestPackage.git"
+  }
+
 }
